Fix facet overflow

--- a/assets/component-collection-filter.css
+++ b/assets/component-collection-filter.css
@@ -81,6 +81,9 @@
 
      height: auto;
 
+     overflow-y: scroll;
+     overflow-x: hidden;
+
      scrollbar-width: thin;
      scrollbar-color: #e5e5e5 transparent;
 }
